# YOLO-dataset

./: .env example  LICENCE  README.md  __main__.py  canvas_area.py  config.py  file_init.py  pyproject.toml  requirements.txt
app/: __main__.py
app/core/: app.py  file_init.py
app/core/models/: canvas_area_model.py  window_model.py
app/core/sidebars/: __init__.py  right_sidebar.py
app/core/sidebars/left_sidebar/: model_name_frame.py  objects_frame.py  points_frame.py
app/core/utils/: config_setup.py  directories_setup.py  logger_setup.py
app/core/utils/initialise/: __init__.py  main_variables_initialise.py  path_variables_initialise.py  window_variables_initialise.py
sidebars/: table_frame.py
sidebars/left_sidebar/: __init__.py  model_name_frame.py  objects_frame.py  points_frame.py
sidebars/right_sidebar/: __init__.py  objects_frame.py
